# hubmap

./: README.md  setup.cfg  tox.ini
hubmap/conversion/: border_core_conversion.py
hubmap/postprocessing/: border_core2instance.py  create_submission.py  nifti2tif.py
hubmap/preprocessing/: gen_dataset.py
hubmap/utils/: nifti2tif.py  normalizer.py  utils.py
