[metadata]
name = hubmap
version = attr: hubmap.__version__
description = Segment instances of microvascular structures from healthy human kidney tissue slides.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Karol-G/hubmap
author = Karol Gotkowski
author_email = karol.gotkowski@dkfz.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Karol-G/hubmap/issues
    Documentation = https://github.com/Karol-G/hubmap#README.md
    Source Code = https://github.com/Karol-G/hubmap
    User Support = https://github.com/Karol-G/hubmap/issues

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.8
include_package_data = True
; package_dir =
;     =hubmap

# add your package requirements here

; [options.packages.find]
; where = hubmap

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
